--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,1 +1,13 @@
 @import-normalize;
+@import url(./fonts/fonts.css);
+
+
+
+/* debugging mode */
+* {
+  border: 1px solid red;
+}
+
+.body {
+  margin: 0;
+}
