--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -11,3 +11,27 @@
 .body {
   margin: 0;
 }
+
+.root {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+};
+
+.ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.anchor {
+  text-decoration: none;
+  background-color: inherit;
+}
+
+.button {
+  padding: 0;
+  border: none;
+  cursor: pointer;
+  background-color: transparent;  
+}
