--- a/frontend/src/layouts/root/root.module.css
+++ b/frontend/src/layouts/root/root.module.css
@@ -2,8 +2,8 @@
   background-color: #f5f2e9;
   color: #282828;
   width: 100vw;
-  font-family: "Inter", sans-serif;
   font-weight: 400;
+  line-height: 1.2;
   font-style: normal;
-  line-height: normal;
+  font-family: "Inter", sans-serif;
 }
