--- a/frontend/src/layouts/root/root.module.css
+++ b/frontend/src/layouts/root/root.module.css
@@ -1,8 +1,8 @@
 .page {
-  background-color: #f5f2e9;
+  background-color: #f5f5f5;
   color: #282828;
   width: 100vw;
-  font-weight: 400;
+  font-weight: 300;
   line-height: 1.2;
   font-style: normal;
   font-family: "Inter", sans-serif;
