--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,11 +1,20 @@
+/* global styles 
+accessible from within 
+subsequent CSS modules */
+
 @import-normalize;
 @import url(./fonts/fonts.css);
 
-
-
-/* debugging mode */
+/* only for debugging purposes */
 * {
   border: 1px solid red;
+}
+
+:root {
+  --accent-color: #000000;
+  --primary-color: #282828;
+  --secondary-color: #6b7280;
+  --background-color: #f5f5f5;
 }
 
 .body {
@@ -16,20 +25,21 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-};
+}
 
-.ul {
+.fancyList {
   margin: 0;
   padding: 0;
   list-style: none;
 }
 
-.anchor {
+.fancyAnchor {
+  color: inherit;
   text-decoration: none;
   background-color: inherit;
 }
 
-.button {
+.fancyButton {
   padding: 0;
   border: none;
   cursor: pointer;
