--- a/frontend/src/layouts/root/root.module.css
+++ b/frontend/src/layouts/root/root.module.css
@@ -1,6 +1,6 @@
 .page {
-  background-color: #f5f5f5;
-  color: #282828;
+  background-color: var(--background-color);
+  color: var(--primary-color);
   width: 100vw;
   font-weight: 300;
   line-height: 1.2;
